==> shabtronic/ESP32-MP3-WIFI-AP/main/oled.cpp <==
#include "oled.h"

void OLED::i2c_start()
	{
	cmd = i2c_cmd_link_create();
	i2c_master_start(cmd);
	}

bool OLED::i2c_stop()
	{
	bool res = true;
	i2c_master_stop(cmd);
	//if (i2c_master_cmd_begin(I2C_NUM_0, cmd, 1 / portTICK_PERIOD_MS) != ESP_OK)
	//	res = false;
	if (i2c_master_cmd_begin(I2C_NUM_0, cmd, I2C_MASTER_LAST_NACK) != ESP_OK)
		res = false;

	i2c_cmd_link_delete(cmd);
	return res;
	}

bool OLED::i2c_send(uint8_t byte)
	{
	i2c_master_write_byte(cmd, byte, false);
	return false;
	}

bool OLED::begin()
	{
	delay(100);
	if (Driver == tDriver::SSD1306)
		return SSD1306_init(i2c_address, 0);

	i2c_start();
	i2c_send(i2c_address << 1); // address + write
	i2c_send(0x00); // command
	i2c_send(0xAE); // display off
	i2c_send(0xD5); // clock divider
	i2c_send(0x80);
	i2c_send(0xA8); // multiplex ratio
	i2c_send(height - 1);
	i2c_send(0xD3); // no display offset
	i2c_send(0x00);
	i2c_send(0x40); // start line address=0
	i2c_send(0x8D); // enable charge pump
	i2c_send(0x14);
	i2c_send(0x20); // memory adressing mode=horizontal
	i2c_send(0x00);
	i2c_send(0xA1); // segment remapping mode
	i2c_send(0xC8); // COM output scan direction
	if (width == 128 && height == 32)
		{
		i2c_send(0xDA); // com pins hardware configuration
		i2c_send(0x02);
		}
	else if (width == 128 && height == 64)
		{
		i2c_send(0xDA); // com pins hardware configuration
		i2c_send(0x12);
		}
	else if (width == 96 && height == 16)
		{
		i2c_send(0xDA); // com pins hardware configuration
		i2c_send(0x02);
		}
	i2c_send(0x81); // contrast control
	i2c_send(0x80);
	i2c_send(0xD9); // pre-charge period
	i2c_send(0x22);
	i2c_send(0xDB); // set vcomh deselect level
	i2c_send(0x20);
	i2c_send(0xA4); // output RAM to display
	i2c_send(0xA6); // display mode A6=normal, A7=inverse
	i2c_send(0x2E); // stop scrolling
	bool res = i2c_stop();
	//delay(100);

	// Clear and send buffer
	clear();
	display();

	// Switch display on

	set_power(true);
	return true;
	}
