==> durydevelop/arduino-lib-oled/src/oled.cpp <==
#include <Arduino.h>
#include "oled.h"

void OLED::i2c_start()
{
    while (!digitalRead(sda_pin) || !digitalRead(scl_pin));
    digitalWrite(sda_pin, LOW);
#if !defined OUTPUT_OPEN_DRAIN
    pinMode(sda_pin, OUTPUT);
#endif
    OLED_I2C_DELAY;
    digitalWrite(scl_pin, LOW);
#if !defined OUTPUT_OPEN_DRAIN
    pinMode(scl_pin, OUTPUT);
#endif
    OLED_I2C_DELAY;
}

void OLED::i2c_stop()
{
#if !defined OUTPUT_OPEN_DRAIN
    pinMode(scl_pin, INPUT);
#endif
    digitalWrite(scl_pin, HIGH);
    OLED_I2C_DELAY;
#if !defined OUTPUT_OPEN_DRAIN
    pinMode(sda_pin, INPUT);
#endif
    digitalWrite(sda_pin, HIGH);
    OLED_I2C_DELAY;
    while (!digitalRead(sda_pin) || !digitalRead(scl_pin));
}

bool OLED::i2c_send(uint8_t byte)
{
    for (int_fast8_t bit = 7; bit >= 0; bit--)
    {
        if (byte & 128)
        {
#if !defined OUTPUT_OPEN_DRAIN
            pinMode(sda_pin, INPUT);
#endif
            digitalWrite(sda_pin, HIGH);
        }
        else
        {
            digitalWrite(sda_pin, LOW);
#if !defined OUTPUT_OPEN_DRAIN
            pinMode(sda_pin, OUTPUT);
#endif
        }
        OLED_I2C_DELAY;
#if !defined OUTPUT_OPEN_DRAIN
        pinMode(scl_pin, INPUT);
#endif
        digitalWrite(scl_pin, HIGH);        
        OLED_I2C_DELAY;
        while (!digitalRead(scl_pin)); 
        digitalWrite(scl_pin, LOW);
#if !defined OUTPUT_OPEN_DRAIN
        pinMode(scl_pin, OUTPUT);
#endif
        OLED_I2C_DELAY;
        byte = byte << 1;
    }
    // Receive ACK
#if !defined OUTPUT_OPEN_DRAIN
    pinMode(sda_pin, INPUT);
#endif
    digitalWrite(sda_pin, HIGH);
#if !defined OUTPUT_OPEN_DRAIN
    pinMode(scl_pin, INPUT);
#endif
    digitalWrite(scl_pin, HIGH);    
    OLED_I2C_DELAY;
    while (!digitalRead(scl_pin)); 
    bool ack = digitalRead(sda_pin) == 0;    
    digitalWrite(scl_pin, LOW);
#if !defined OUTPUT_OPEN_DRAIN
    pinMode(scl_pin, OUTPUT);
#endif
    OLED_I2C_DELAY;
    return ack;
}

void OLED::begin()
{
#if defined OUTPUT_OPEN_DRAIN
    pinMode(sda_pin, OUTPUT_OPEN_DRAIN);
    digitalWrite(sda_pin, HIGH);
    pinMode(scl_pin, OUTPUT_OPEN_DRAIN);
    digitalWrite(scl_pin, HIGH);
#else
    pinMode(sda_pin, INPUT);
    pinMode(scl_pin, INPUT);
#endif
    if (reset_pin != NO_RESET_PIN)
    {
        pinMode(reset_pin, OUTPUT);
        digitalWrite(reset_pin, LOW);
        delay(10);
        digitalWrite(reset_pin, HIGH);
    }
    delay(100);
    i2c_start();
    i2c_send(i2c_address << 1); // address + write
    i2c_send(0x00); // command
    i2c_send(0xAE); // display off
    i2c_send(0xD5); // clock divider
    i2c_send(0x80); 
    i2c_send(0xA8); // multiplex ratio
    i2c_send(height - 1); 
    i2c_send(0xD3); // no display offset
    i2c_send(0x00); 
    i2c_send(0x40); // start line address=0
    i2c_send(0x8D); // enable charge pump
    i2c_send(0x14); 
    i2c_send(0x20); // memory adressing mode=horizontal
    i2c_send(0x00); 
    i2c_send(0xA1); // segment remapping mode
    i2c_send(0xC8); // COM output scan direction
    if (width == 128 && height == 32)
    {
        i2c_send(0xDA); // com pins hardware configuration
        i2c_send(0x02); 
    }
    else if (width == 128 && height == 64)
    {
        i2c_send(0xDA); // com pins hardware configuration
        i2c_send(0x12); 
    }
    else if (width == 96 && height == 16)
    {
        i2c_send(0xDA); // com pins hardware configuration
        i2c_send(0x02); 
    }
    i2c_send(0x81); // contrast control
    i2c_send(0x80);
    i2c_send(0xD9); // pre-charge period
    i2c_send(0x22); 
    i2c_send(0xDB); // set vcomh deselect level
    i2c_send(0x20); 
    i2c_send(0xA4); // output RAM to display
    i2c_send(0xA6); // display mode A6=normal, A7=inverse
    i2c_send(0x2E); // stop scrolling
    i2c_stop();
    delay(100);

    // Clear and send buffer
    clear();
    display();

    // Switch display on
    set_power(true);
}
